--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.11"
 dynaconf = "3.1.12"
+requests = "^2.31.0"
+mashumaro = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.4.0"
@@ -16,6 +18,9 @@ ruff = "^0.0.277"
 
 [tool.pytest.ini_options]
 testpaths = ["tests",]
+
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.17.4"
 
 [tool.coverage.run]
 branch = true
