--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.11"
 dynaconf = "3.2.4"
+librecaptcha = "0.7.3"
+mashumaro = "^3.12"
 
 [tool.poetry.dev-dependencies]
 pytest = "8.0.0"
