--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 dynaconf = "3.2.4"
 librecaptcha = "0.7.3"
 mashumaro = "^3.12"
+pyjwt = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "8.0.0"
