First Commit - Logic without JWT generation (#5)
* Initial commit

* Fix naming and add remote_reading

* Minor fixes

* PyLint fixes

* Lint to fix build errors

* Ruff linter fixes

* Bad paste

* Add tests

* Fix Ruff issues

* Reduce code coverage limit

* Add 403 Test

* Don't cover `get_authorization_token`

* Try to work with token as a bearer

* Get consumer and remote reading

* Working flow with manual endpoint

* Update README.md

* Fix Lint errors

* Fix Lint errors

* Add screenshot to README

* Ignore some tests for coverage

---------

Co-authored-by: Guy Khmelnitsky <guy.khmelnitsky@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.11"
 dynaconf = "3.2.4"
+librecaptcha = "0.7.3"
+mashumaro = "^3.12"
+pyjwt = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "8.0.0"
