--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,5 +25,5 @@ jobs:
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          poetry config pypi-token.pypi PYPI_API_TOKEN
+          poetry config pypi-token.pypi $PYPI_TOKEN
           poetry publish --build
