--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,12 @@ mashumaro = "^3.12"
 pyjwt = "^2.8.0"
 requests = "^2.31.0"
 pkce = "^1.0.3"
+aiohttp = "^3.9.3"
 
 [tool.poetry.dev-dependencies]
-pytest = "8.0.0"
+pytest = "8.0.1"
 pytest-cov = "^4.1.0"
-ruff = "^0.2.0"
+ruff = "^0.2.2"
 
 [tool.pytest.ini_options]
 testpaths = ["tests",]
@@ -40,7 +41,7 @@ directory = "htmlcov"
 
 [tool.ruff]
 line-length = 120
-select = ["E", "F", "W", "I", "N"]
+lint.select = ["E", "F", "W", "I", "N"]
 target-version = "py311"
 
 [build-system]
