--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iec-api"
-version = "0.1.4"
+version = "0.1.5"
 description = "A Python wrapper for Israel Electric Company API"
 authors = ["GuyKh"]
 license = "MIT"
@@ -40,7 +40,7 @@ directory = "htmlcov"
 
 [tool.ruff]
 line-length = 120
-select = ["E", "F", "W", "I", "N"]
+lint.select = ["E", "F", "W", "I", "N"]
 target-version = "py311"
 
 [build-system]
