--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pkce = "^1.0.3"
 pytest = "8.0.1"
 pytest-cov = "^4.1.0"
 ruff = "^0.2.0"
+pre-commit = "^3.2.2"
 
 [tool.pytest.ini_options]
 testpaths = ["tests",]
