--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iec-api"
-version = "0.1.6"
+version = "0.2.0"
 description = "A Python wrapper for Israel Electric Company API"
 authors = ["GuyKh"]
 license = "MIT"
@@ -9,7 +9,6 @@ maintainers = [
     "Guy Khmelnitsky <guykhmel@gmail.com>",
 ]
 repository = "https://github.com/GuyKh/py-iec-api"
-homepage = "https://pypi.org/project/iec-api/"
 keywords = ["python", "poetry", "api", "iec", "israel", "electric"]
 
 [tool.poetry.dependencies]
@@ -32,7 +31,7 @@ testpaths = ["tests",]
 
 [tool.coverage.run]
 branch = true
-omit = ["*/tests/*"]
+omit = ["*/tests/*", "example.py"]
 
 [tool.coverage.report]
 show_missing = true
