--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iec-api"
-version = "0.1.7"
+version = "0.2.0"
 description = "A Python wrapper for Israel Electric Company API"
 authors = ["GuyKh"]
 license = "MIT"
@@ -9,7 +9,6 @@ maintainers = [
     "Guy Khmelnitsky <guykhmel@gmail.com>",
 ]
 repository = "https://github.com/GuyKh/py-iec-api"
-homepage = "https://pypi.org/project/iec-api/"
 keywords = ["python", "poetry", "api", "iec", "israel", "electric"]
 
 [tool.poetry.dependencies]
@@ -18,6 +17,8 @@ mashumaro = "^3.12"
 pyjwt = "^2.8.0"
 requests = "^2.31.0"
 pkce = "^1.0.3"
+aiohttp = "^3.9.3"
+aiofiles = "^23.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "8.0.1"
@@ -30,7 +31,7 @@ testpaths = ["tests",]
 
 [tool.coverage.run]
 branch = true
-omit = ["*/tests/*"]
+omit = ["*/tests/*", "example.py"]
 
 [tool.coverage.report]
 show_missing = true
