fix: Localize dates to TimeZone Asia/Jerusalem (#73)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iec-api"
-version = "0.2.3"
+version = "0.2.4"
 description = "A Python wrapper for Israel Electric Company API"
 authors = ["GuyKh"]
 license = "MIT"
@@ -20,6 +20,7 @@ pkce = "^1.0.3"
 aiohttp = "^3.9.1"
 aiofiles = "^23.2.1"
 loguru = "^0.7.2"
+pytz = "^2024.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "8.0.2"
