--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,50 @@
-[tool.poetry]
+[project]
 name = "iec-api"
 version = "0.0.1"
 description = "A Python wrapper for Israel Electric Company API"
-authors = ["GuyKh"]
-license = "MIT"
+authors = [{ name = "GuyKh" }]
+requires-python = "~=3.10"
 readme = "README.md"
-maintainers = [
-    "Guy Khmelnitsky <guykhmel@gmail.com>",
+license = "MIT"
+maintainers = [{ name = "Guy Khmelnitsky", email = "guykhmel@gmail.com" }]
+keywords = [
+    "python",
+    "poetry",
+    "api",
+    "iec",
+    "israel",
+    "electric",
 ]
-repository = "https://github.com/GuyKh/py-iec-api"
-keywords = ["python", "poetry", "api", "iec", "israel", "electric"]
-packages = [
-    { include = "iec_api" }
+dependencies = [
+    "mashumaro~=3.13",
+    "pyjwt>=2.8.0,<3",
+    "requests>=2.31.0,<3",
+    "pkce>=1.0.3,<2",
+    "aiohttp>=3.9.1,<4",
+    "aiofiles>=23.2.1,<25.0.0",
+    "pytz~=2024.1",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-mashumaro = "^3.13"
-pyjwt = "^2.8.0"
-requests = "^2.31.0"
-pkce = "^1.0.3"
-aiohttp = "^3.9.1"
-aiofiles = ">=23.2.1,<25.0.0"
-pytz = "^2024.1"
+[project.urls]
+Repository = "https://github.com/GuyKh/py-iec-api"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "8.3.5"
-pytest-cov = "^6.0.0"
-ruff = "^0.11.0"
-pre-commit = "^4.0.0"
+[dependency-groups]
+dev = [
+    "pytest==8.3.5",
+    "pytest-cov>=6.0.0,<7",
+    "ruff>=0.11.0,<0.12",
+    "pre-commit>=4.0.0,<5",
+]
+
+[tool.hatch.build.targets.sdist]
+include = ["iec_api"]
+
+[tool.hatch.build.targets.wheel]
+include = ["iec_api"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
 testpaths = ["tests",]
@@ -48,7 +64,3 @@ directory = "htmlcov"
 line-length = 120
 lint.select = ["E", "F", "W", "I", "N"]
 target-version = "py311"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
