--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 mashumaro = "^3.13"
-pyjwt = "^2.8.0"
+pyjwt = {version = "^2.8.0", extras = ["crypto"]}
+cryptography = "^42.0.0"
 requests = "^2.31.0"
 pkce = "^1.0.3"
 aiohttp = "^3.9.1"
