--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,11 +12,16 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Installing the project
-        run: make docker/install
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      - name: Install dependencies
+        run: uv sync --dev
 
       - name: Running Lint
-        run: make docker/lint
+        run: uv run --with ruff ruff check .
 
-      #- name: Running tests
-      #  run: make docker/test
+      - name: Running tests
+        run: uv run --with pytest --with pytest-cov pytest --cov-report=term --cov .
