--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,43 @@
-[tool.poetry]
+[project]
 name = "iec-api"
 version = "0.0.1"
 description = "A Python wrapper for Israel Electric Company API"
-authors = ["GuyKh"]
-license = "MIT"
 readme = "README.md"
+license = { text = "MIT" }
+authors = [
+    { name = "GuyKh" },
+]
 maintainers = [
-    "Guy Khmelnitsky <guykhmel@gmail.com>",
+    { name = "Guy Khmelnitsky", email = "guykhmel@gmail.com" },
 ]
 repository = "https://github.com/GuyKh/py-iec-api"
-keywords = ["python", "poetry", "api", "iec", "israel", "electric"]
-packages = [
-    { include = "iec_api" }
+keywords = ["python", "api", "iec", "israel", "electric"]
+requires-python = ">=3.10"
+dependencies = [
+    "mashumaro>=3.13,<4.0.0",
+    "pyjwt>=2.8.0,<3.0.0",
+    "requests>=2.31.0,<3.0.0",
+    "pkce>=1.0.3,<2.0.0",
+    "aiohttp>=3.9.1,<4.0.0",
+    "aiofiles>=25.1.0,<25.2.0",
+    "pytz>=2024.1,<2025.0",
+    "cryptography>=44.0.0,<100.0.0",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-mashumaro = "^3.13"
-pyjwt = "^2.8.0"
-requests = "^2.31.0"
-pkce = "^1.0.3"
-aiohttp = "^3.9.1"
-aiofiles = ">=25.1.0,<25.2.0"
-pytz = "^2024.1"
-cryptography = ">=44.0.0,<100.0.0"
+[project.optional-dependencies]
+dev = [
+    "pytest>=9.0.2,<10.0.0",
+    "pytest-cov>=7.0.0,<8.0.0",
+    "ruff>=0.15.0,<0.16.0",
+    "pre-commit>=4.0.0,<5.0.0",
+]
 
-
-[tool.poetry.group.dev.dependencies]
-pytest = "9.0.2"
-pytest-cov = "^7.0.0"
-ruff = "^0.15.0"
-pre-commit = "^4.0.0"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
-testpaths = ["tests",]
+testpaths = ["tests"]
 
 [tool.coverage.run]
 branch = true
@@ -50,7 +54,3 @@ directory = "htmlcov"
 line-length = 120
 lint.select = ["E", "F", "W", "I", "N"]
 target-version = "py311"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
